# volk

./: 1.4_to_2.0_compat_report.html  CHANGELOG.md  CMakeLists.txt  README.md  changelog  control  copyright  libvolk-doc.doc-base  libvolk2-dev.abi.tar.gz.amd64  libvolk2-dev.docs  rules
apps/: CMakeLists.txt
cmake/Modules/: VolkPython.cmake
cpu_features/: README.md
debian/: 2.2.0_to_2.2.1_compat_report.html  changelog  control  copyright  libvolk2-bin.install  libvolk2-dev.docs  rules  watch
debian/patches/: 0001-Fix-AVX-FMA-rotator.patch  0001-volk-accurate-exp-kernel.patch  (+40 more)
docs/: CMakeLists.txt  Doxyfile.in
lib/: CMakeLists.txt  kernel_tests.h
patches/: 0001-Add-volk_32f-c-_index_min_16-32u.patch  0001-Allow-for-rounding-error-in-float-to-int-conversions.patch  0001-ci-Remove-license-check.patch  0002-Allow-for-rounding-error-in-volk_32fc_s32f_magnitude.patch  0002-readme-Make-supported-compiler-section-more-specific.patch  0003-Remove-broken-sse_32-kernels.patch  0003-Use-sensible-scalars-for-rotator-and-power.patch  0004-Code-cleanup.patch  0004-add-volk_32f_s32f_x2_convert_8u-kernel.patch  0005-Fix-flaky-mod_range-test.patch  0006-New-generic-implementation-fixed-typos.patch  0006-update-to-newest-version-of-the-Intel-SDE.patch  0009-Code-cleanup.patch  0009-docs-Fix-conversion-inaccuracy.patch  avoid-unnecessary-soversion-bump  doxygen-pdf  doxygen-without-sse2neon  make-acc-happy  omit-build-paths  omit-doxygen-build-paths  remove-external-HTML-resources  series  skip-cpu_features-on-kfreebsd  update-doxygen  use-system-cpu-features-package.patch
(+6 files in other folders)
